--- a/assets/app/posts/post.component.html
+++ b/assets/app/posts/post.component.html
@@ -1,4 +1,3 @@
 <h4>{{postData.author}}</h4>
-<p>{{postData.content}}</p>
-<h5>{{postData.tags}}</h5>
-<h5>{{postData.date | date: 'dd/MM/yyyy'}}</h5>
+<p>Posted by {{postData.content}} on {{postData.date | date: 'dd/MM/yyyy'}} </p>
+<h6>{{postData.tags}}</h6>
