added header logo and reformatted css files

--- a/assets/app/shared/layout/header.component.html
+++ b/assets/app/shared/layout/header.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar">
   <div class="container">
+    <div class="logo">
+      <span>Storyteller</span>
+    </div>
     <ul class="navbar-list">
       <li class="navbar-item">
         <a class="navbar-link" routerLink='stories' routerLinkActive='active' >
