--- a/assets/app/shared/layout/header.component.css
+++ b/assets/app/shared/layout/header.component.css
@@ -9,6 +9,21 @@ li.navbar-item::after {
   margin-top: 18rem;
 }
 
+.logo {
+  float:left;
+  display:table;
+  height:65px;
+  color:#8D4DF4;
+  font-family:'PT Serif', serif;
+  font-weight:700;
+  font-size:1.5em;
+}
+
+.logo > span {
+  display:table-cell;
+  vertical-align:middle;
+}
+
 .navbar+.docs-section {
   border-top-width: 0;
 }
@@ -55,81 +70,4 @@ li.navbar-item::after {
 }
 .has-docked-nav .navbar-spacer {
   display: block;
-}
-
-/* Popover */
-.popover.open {
-  display: block;
-}
-.popover {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #fff;
-  border: 1px solid #eee;
-  border-radius: 4px;
-  top: 92%;
-  left: -50%;
-  -webkit-filter: drop-shadow(0 0 6px rgba(0, 0, 0, .1));
-  -moz-filter: drop-shadow(0 0 6px rgba(0, 0, 0, .1));
-  filter: drop-shadow(0 0 6px rgba(0, 0, 0, .1));
-}
-.popover-item:first-child .popover-link:after, .popover-item:first-child .popover-link:before {
-  bottom: 100%;
-  left: 50%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-.popover-item:first-child .popover-link:after {
-  border-color: rgba(255, 255, 255, 0);
-  border-bottom-color: #fff;
-  border-width: 10px;
-  margin-left: -10px;
-}
-.popover-item:first-child .popover-link:before {
-  border-color: rgba(238, 238, 238, 0);
-  border-bottom-color: #eee;
-  border-width: 11px;
-  margin-left: -11px;
-}
-.popover-list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-.popover-item {
-  padding: 0;
-  margin: 0;
-}
-.popover-link {
-  position: relative;
-  color: #222;
-  display: block;
-  padding: 8px 20px;
-  border-bottom: 1px solid #eee;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.0rem;
-  font-weight: 600;
-  text-align: center;
-  letter-spacing: .1rem;
-}
-.popover-item:first-child .popover-link {
-  border-radius: 4px 4px 0 0;
-}
-.popover-item:last-child .popover-link {
-  border-radius: 0 0 4px 4px;
-  border-bottom-width: 0;
-}
-.popover-link:hover {
-  color: #fff;
-  background: #8D4DF4;
-}
-.popover-link:hover, .popover-item:first-child .popover-link:hover:after {
-  border-bottom-color: #8D4DF4;
 }
