--- a/assets/app/input-form/input-form.component.html
+++ b/assets/app/input-form/input-form.component.html
@@ -2,25 +2,31 @@
 <h3>Submit your story!</h3>
 <form [formGroup]='addNewForm' (ngSubmit)='onSubmit()'>
   <div class="row">
-    <div class="four columns">
-      <label for="author">Author</label>
-      <input class="u-full-width" type="text" formControlName='author'>
-    </div>
-    <div class="row">
-      <div class="twelve columns">
-        <label for="content">Content</label>
-        <input class="u-full-width" type="text" formControlName='content'>
-      </div>
-    </div>
-    <div class="row">
-      <div class="eight columns">
-        <label for="tags">Tags</label>
-        <input class="u-full-width" type="text" formControlName='tags'>
-      </div>
+    <div class="nine columns">
+      <label for="title">Story title</label>
+      <input class="u-full-width" type="text" formControlName='title'>
     </div>
   </div>
   <div class="row">
-    <button type="submit" class="button-primary" [disabled]='!addNewForm.valid'>
+    <div class="nine columns">
+      <label for="mainImg">Image URL</label>
+      <input class="u-full-width" type="text" formControlName='mainImg'>
+    </div>
+  </div>
+  <div class="row">
+    <div class="eight columns">
+      <label for="content">Content</label>
+      <textarea class="u-full-width" formControlName='content'></textarea>
+    </div>
+  </div>
+  <div class="row">
+    <div class="eight columns">
+      <label for="tags">Tags</label>
+      <input class="u-full-width" type="text" formControlName='tags'>
+    </div>
+  </div>
+  <div class="row">
+    <button type="submit" class="button-primary">
       Submit
     </button>
   </div>
