--- a/assets/app/posts/post.component.html
+++ b/assets/app/posts/post.component.html
@@ -1,3 +1,9 @@
-<h4>{{postData.author}}</h4>
-<p>Posted by {{postData.content}} on {{postData.date | date: 'dd/MM/yyyy'}} </p>
-<h6>{{postData.tags}}</h6>
+<div class="story-main-img-container">
+  <div class="main-img" [ngStyle]="{background:'url(' + postData.mainImg +')'}"></div>
+</div>
+<div class="story-details">
+  <h3>{{postData.title}}</h3>
+  <p>{{postData.content}}</p>
+  <h5>Posted by {{postData.author}} on {{postData.date | date: 'dd/MM/yyyy'}} </h5>
+  <h6>{{postData.tags}}</h6>
+</div>
