removed top border on navigation menu

--- a/assets/app/posts/post-list.component.css
+++ b/assets/app/posts/post-list.component.css
@@ -1,5 +1,5 @@
 li {
-  border-top: 0.15em solid #8D4DF4;
+  border-top: 3px solid #8D4DF4;
   list-style-type: none;
   box-shadow: 4px 10px 19px rgba(0,0,0,.15);
   margin-top: 2.5em;
