--- a/assets/app/shared/layout/header.component.html
+++ b/assets/app/shared/layout/header.component.html
@@ -19,6 +19,9 @@
           Sign Up
         </a>
       </li>
+      <li class="navbar-item">
+        <app-logout></app-logout>
+      </li>
     </ul>
   </div>
 </nav>
