--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ html
     base(href='/')
     title Storyteller
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css')  
   body
     app-root Loading...
     script(src='/js/app/bundle.js')
