--- a/assets/app/shared/layout/header.component.html
+++ b/assets/app/shared/layout/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="container">
     <div class="logo">
-      <span>Storyteller</span>
+      <a routerLink='/'>Storyteller</a>
     </div>
     <ul class="navbar-list">
       <li class="navbar-item">
