--- a/assets/app/posts/post.component.html
+++ b/assets/app/posts/post.component.html
@@ -1,8 +1,8 @@
-<div class="story-main-img-container">
+<div class="story-main-img-container" [routerLink]="['/stories', postData.id]">
   <div class="main-img" [ngStyle]="{background:'url(' + postData.mainImg +')'}"></div>
 </div>
 <div class="story-details">
-  <h3>{{postData.title}}</h3>
+  <h3 [routerLink]="['/stories', postData.id]">{{postData.title}}</h3>
   <h5 class="author-date">Posted by <a href="#">{{postData.author}}</a> on {{postData.date | date: 'dd/MM/yyyy'}}</h5>
   <p class="content">{{postData.content}}</p>
   <div class="row">
