added story detail page and wired up with backend

--- a/assets/app/posts/post-page.component.html
+++ b/assets/app/posts/post-page.component.html
@@ -1,4 +1,16 @@
-<div class="container" *ngIf="post">
-  <h3>{{post.title}} DETAILS</h3>
-  <h5>by {{post.author}}</h5>
+<div *ngIf="post">
+  <div class="full-w-bg" [ngStyle]="{background:'url(' + post?.mainImg +')'}"></div>
+  <div class="container">
+    <div class="heading-text">
+      <h5>{{post.date | date : 'mediumDate'}}</h5>
+      <h2>{{post.title}}</h2>
+      <span class="author">written by <a href="#">{{post.author}}</a></span>
+    </div>
+    <p class="p_intro">{{post.content}}</p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam dolorum nihil, repudiandae ipsa architecto tempora incidunt. Esse quaerat tempora laboriosam, officiis, error maxime, cupiditate atque possimus, quibusdam fugiat cum voluptates.
+      Facere a sequi quaerat rem voluptas repudiandae rerum iure, facilis soluta delectus numquam sunt, error recusandae dolores accusamus minus! Officiis aut sunt praesentium voluptatem ut doloremque deserunt totam ex animi?
+    </p>
+    <p>Fugit perferendis excepturi in accusantium, cupiditate eius ea dolores expedita laboriosam delectus, architecto, sint eaque, voluptate commodi totam! Fuga, facilis, excepturi. Aspernatur, distinctio veritatis, eius minus consectetur vero repellat ipsum.</p>
+  </div>
 </div>
