--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway|PT+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700|PT+Serif:400,700');
 
 .container {
   position: relative;
@@ -87,11 +87,13 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
 body {
+  overflow-x: hidden;
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: #222;
+  letter-spacing:.02em; }
 
 
 /* Typography
