moved story edit and delete button inside the story detail page, and added some css rules

--- a/assets/app/auth/signin.component.html
+++ b/assets/app/auth/signin.component.html
@@ -6,9 +6,9 @@
       <label for="email">Email</label>
       <input class="u-full-width" type="text" formControlName='email'>
     </div>
-    <div class="four columns">
+    <div class="four columns form-group">
       <label for="password">Password</label>
-      <input class="u-full-width" type="text" formControlName='password'>
+      <input class="u-full-width" type="password" formControlName='password'>
     </div>
   </div>
   <div class="row">
