implemented patch route for editing posts

--- a/assets/app/posts/post-page.component.css
+++ b/assets/app/posts/post-page.component.css
@@ -75,6 +75,7 @@ ul.story-editing > li > a {
    padding:4px;
    color:#333;
    cursor:pointer;
+   text-decoration:none;
 }
 
 ul.story-editing > li > a:hover {
