--- a/assets/app/posts/post-page.component.html
+++ b/assets/app/posts/post-page.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="five columns">
           <ul class="story-editing">
-            <li><a (click)=onEdit(post)><span class="ionicon ion-ios-compose-outline"></span>Edit Story</a></li>
+            <li><a [routerLink]="['/stories','edit',post._id]"><span class="ionicon ion-ios-compose-outline"></span>Edit Story</a></li>
             <li><a (click)=onDelete(post)><span class="ionicon ion-ios-trash-outline"></span>Delete Story</a></li>
           </ul>
         </div>
