--- a/assets/app/posts/post-page.component.html
+++ b/assets/app/posts/post-page.component.html
@@ -6,7 +6,7 @@
           <h5>{{post.date | date : 'mediumDate'}}</h5>
         </div>
         <div class="five columns">
-          <ul class="story-editing">
+          <ul class="story-editing" *ngIf="postedByCurrentUser()">
             <li><a [routerLink]="['/stories','edit',post._id]"><span class="ionicon ion-ios-compose-outline"></span>Edit Story</a></li>
             <li><a (click)=onDelete(post)><span class="ionicon ion-ios-trash-outline"></span>Delete Story</a></li>
           </ul>
