added error handling component and service to improve usability

--- a/assets/app/forms/input-form.component.html
+++ b/assets/app/forms/input-form.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="row">
-    <button type="submit" class="button-primary">
+    <button type="submit" class="button-primary" [disabled]='!addNewForm.valid'>
       Submit
     </button>
   </div>
