--- a/assets/app/forms/edit-form.component.html
+++ b/assets/app/forms/edit-form.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="row">
-    <button type="submit" class="button-primary">
+    <button type="submit" class="button-primary" [disabled]='!editForm.valid'>
       Submit
     </button>
   </div>
