--- a/assets/app/posts/post.component.html
+++ b/assets/app/posts/post.component.html
@@ -1,4 +1,4 @@
-<div class="story-main-img-container" [routerLink]="['/stories', post.id]">
+<div class="story-main-img-container" [routerLink]="['/stories', post._id]">
   <div class="main-img" [ngStyle]="{background:'url(' + post.mainImg +')'}"></div>
 </div>
 <div class="story-details">
