--- a/assets/app/shared/layout/header.component.html
+++ b/assets/app/shared/layout/header.component.html
@@ -10,8 +10,8 @@
         </a>
       </li>
       <li class="navbar-item">
-        <a class="navbar-link" routerLink='stories/featured' routerLinkActive='active' >
-          Featured
+        <a class="navbar-link" routerLink='stories/favourites' routerLinkActive='active'>
+          Favourites
         </a>
       </li>
       <li class="navbar-item" *ngIf='!isLoggedIn()'>
