--- a/assets/app/posts/post-page.component.html
+++ b/assets/app/posts/post-page.component.html
@@ -3,7 +3,11 @@
     <div class="heading-text">
       <div class="row">
         <div class="seven columns">
-          <h5>{{post.date | date : 'mediumDate'}}</h5>
+          <h5>
+            <span>{{post.date | date : 'mediumDate'}}</span>
+            <span class="long-bar"></span>
+            <span class="author">written by <a href="#">{{post.author}}</a></span>
+          </h5>
         </div>
         <div class="five columns">
           <ul class="story-editing" *ngIf="postedByCurrentUser()">
@@ -13,7 +17,19 @@
         </div>
       </div>
       <h2>{{post.title}}</h2>
-      <span class="author">written by <a href="#">{{post.author}}</a></span>
+      <ul class="story-editing subtitle-menu">
+        <li class="fav">
+          <a (click)="addToFavourites(post._id)">
+            <span class="ionicon ion-ios-heart-outline"></span>Favourite
+          </a>
+        </li>
+        <li>
+          <a (click)=sharePost(post)>
+            <span class="ionicon ion-ios-redo-outline"></span>Share
+          </a>
+        </li>
+      </ul>
+
     </div>
 
   <div class="row story-content">
