improved UI and added a simple redirect to index if requesting the user favourites without logging in first.

--- a/assets/app/posts/post-list.component.html
+++ b/assets/app/posts/post-list.component.html
@@ -1,4 +1,7 @@
 <ul>
   <li *ngFor="let post of posts" class="twelve columns">
-    <app-post [post]='post'></app-post></li>
+    <app-post [post]='post'></app-post>
+  </li>
+  <div class="row-spacer"></div>
+  <h3 *ngIf="posts?.length == 0"> Sorry, there isn't any story to display. </h3>
 </ul>
